fix: tag,category and impact year dropdown url

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -59,7 +59,7 @@
             <input type="text" id="blog-search-input" placeholder="Search articles..." class="input input-bordered w-full pl-10" />
         </div>
         <div class="mt-2 text-sm text-gray-500">
-            💡 Tip: Browse by <a href="/categories" class="link link-hover">category</a> or <a href="/tags" class="link link-hover">tag</a> using the badges below each article
+            💡 Tip: Browse by <a href="{{ get_url(path='categories') | safe }}" class="link link-hover">category</a> or <a href="{{ get_url(path='tags') | safe }}" class="link link-hover">tag</a> using the badges below each article
         </div>
     </div>
 
@@ -102,7 +102,7 @@
                             {% if page.taxonomies.categories %}
                                 {% for category in page.taxonomies.categories %}
                                     {% set cat_slug = category | slugify %}
-                                    <a href="/categories/{{ cat_slug }}" class="badge badge-primary badge-sm" title="View all posts in category '{{ category }}'">{{ category }}</a>
+                                    <a href="{{ get_url(path='categories/' ~ cat_slug) | safe }}" class="badge badge-primary badge-sm" title="View all posts in category '{{ category }}'">{{ category }}</a>
                                 {% endfor %}
                             {% endif %}
                             
@@ -110,7 +110,7 @@
                             {% if page.taxonomies.tags %}
                                 {% for tag in page.taxonomies.tags %}
                                     {% set tag_slug = tag | slugify %}
-                                    <a href="/tags/{{ tag_slug }}" class="badge badge-ghost badge-outline badge-sm hover:badge-primary transition-colors" title="View all posts tagged '{{ tag }}'">{{ tag }}</a>
+                                    <a href="{{ get_url(path='tags/' ~ tag_slug) | safe }}" class="badge badge-ghost badge-outline badge-sm hover:badge-primary transition-colors" title="View all posts tagged '{{ tag }}'">{{ tag }}</a>
                                 {% endfor %}
                             {% endif %}
                         </div>
