--- a/templates/index.html
+++ b/templates/index.html
@@ -174,6 +174,7 @@
               }
             </script>
 
+            {{ macros_footer::footer(config=config) }}
         </div>
 
         {% set lang_root_path = "/" ~ lang ~ "/" %}
