--- a/templates/landing.html
+++ b/templates/landing.html
@@ -342,7 +342,8 @@
             </div>
         </div>
     {% endif %}
-{% endblock content %} -->
+-->
+{% endblock content %}
 
 {% block js_body %}
     {{ super() }}
